fix: canvas width overflow

--- a/web_server/WSP-Pages/paint/css/predict-pages.css
+++ b/web_server/WSP-Pages/paint/css/predict-pages.css
@@ -1,7 +1,5 @@
 #nav-predict {
     background-color: #ffffff;
-    /* height: 100vh;
-    width: 100vw; */
 }
 
 #predictPages {
