--- a/web_server/WSP-Pages/paint/css/self-bootstrap.css
+++ b/web_server/WSP-Pages/paint/css/self-bootstrap.css
@@ -88,3 +88,7 @@
 .tooltip {
     z-index: 999999999;
 }
+
+.img-thumbnail{
+    width: 100%;
+}
